<resources>
    <string name="app_name">final_project</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>
    <string name="back">Back</string>
    <string name="controller_name">Controller Name</string>
    <string name="home_icon_decs">Home icon</string>
    <string name="mac_address">MAC address</string>
    <string name="save">Save</string>
    <string name="sensor_name">Sensor name</string>
    <string name="delete_controller">Delete Controller</string>
    <string name="delete_sensor">Delete sensor</string>
    <string name="type_of_sensor">Type of sensor</string>
    <string name="device_name">Device name</string>
    <string name="value">Value :</string>
    <string name="no_available_devices">You don\'t have any available devices</string>
    <string name="users">Users</string>
    <string name="scripts">Scripts</string>
    <string name="sensors">Sensors</string>
    <string name="devices">Devices</string>
    <string name="settings">Settings</string>
    <string name="type_of_device">Type of device</string>
    <string name="delete_device">Delete device</string>
    <string name="user_name">User name</string>
    <string name="no_available_sensors">You don\'t have any available sensors</string>
    <string name="no_available_users">You don\'t have any available users</string>
    <string name="script_name">Script name</string>
    <string name="commands">Commands</string>
    <string name="command_name">Command name</string>
    <string name="no_available_scripts">You don\'t have any available scripts</string>
    <string name="no_available_commands">You don\'t have any available commands</string>
    <string name="delete_script">Delete script</string>
    <string name="device_configurations">Device configurations</string>
    <string name="delete_command">Delete command</string>
    <string name="no_available_controllers">You don\'t have any available controllers</string>
    <string name="default_notification_channel_id">10001</string>
    <string name="default_channel">10001</string>
</resources>
