<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:context=".SignInActivity"
    >

    <TextView
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernameTextView"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameEditText"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTextView"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordEditText"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            android:layout_height="wrap_content" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:id="@+id/buttonBar">

            <Button
                    android:text="@string/sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonSI"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_login"
                    android:textColor="#FFFFFF"
                    android:layout_marginEnd="8dp"
                    android:textSize="18sp"
            />

            <Button
                    android:text="@string/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/buttonSU"
                    android:background="@drawable/custom_button_login"
                    android:textColor="#FFFFFF"
                    android:layout_marginStart="8dp"
                    android:textSize="18sp"
            />

    </LinearLayout>

    <Button
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonFP"
            android:text="@string/forgot_password"
            app:layout_constraintTop_toBottomOf="@id/buttonBar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>