<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChangePasswordActivity">

    <TextView
            android:text="@string/new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newPasswordTextView"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newPasswordEditText"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordTextView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"/>

    <TextView
            android:text="@string/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confPasswordTextView"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordEditText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confPasswordEditText"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/confPasswordTextView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"/>

    <Button
            android:text="@string/change_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button3" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/confPasswordEditText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>