<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sensorNameTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/name"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidth="2dp"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sensorNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sensorPinTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="PIN"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidth="2dp"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sensorPinEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sensorTypeSpinner"
                android:spinnerMode="dialog"
                android:foregroundTint="#000"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sensorSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:checked="false"
                android:text="Status    "
                android:textSize="18sp"
                android:theme="@style/SwitchTheme" />

        <LinearLayout
                android:id="@+id/buttonBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonBack"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:strokeColor="@color/colorPrimary" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="16dp"
                android:text="@string/delete_sensor"
                android:textSize="20sp"
                app:backgroundTint="#ff0000" />

    </LinearLayout>

    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#F5F5F5"
            android:indeterminate="true"
            android:progressTint="@color/colorPrimaryDark" />

</FrameLayout>